# advent-of-code

./: pyproject.toml
2021/day1/: README.md  part_1.py  part_2.py
2021/day2/: README.md  part_1.py  part_2.py
2021/day2/tests/: test_part_1.py  test_part_2.py
2021/day3/: README.md  part_1.py  part_2.py
2021/day3/tests/: test_part_1.py  test_part_2.py
2022/day1/: part1.py
2022/day2/: day2.py
2022/day3/: day3.py
2022/day4/: day4.py
2022/day5/: day5.py
2022/day6/: day6.py
2023/day1/: part1.php  part2.php
2023/day2/: part1.php  part2.php
2023/day3/: part1.php  part2.php
