[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Paul Fouquet <pfouquet@linz.govt.nz>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
